<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pb_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pb_title1"
                android:textSize="22sp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_below="@id/pb_title1"
                android:id="@+id/pb_content1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pb_content1"
                android:textSize="15sp"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_below="@id/pb_content1"
                android:id="@+id/pb_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pb_title2"
                android:textSize="22sp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_below="@id/pb_title2"
                android:id="@+id/pb_content2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pb_content2"
                android:textSize="15sp"/>

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>