<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/MyMaterialTheme"
        android:id="@+id/appbarlayout">

        <include
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- The main content view -->

    <RelativeLayout
        android:layout_below="@id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mf_des01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dr_des01_title"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/mf_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dr_ans_des"
            android:layout_marginBottom="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/mf_des03"
            android:layout_alignStart="@+id/mf_des03" />

        <TextView
            android:id="@+id/mf_des03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dr_des03_title"
            android:layout_above="@id/mf_ans"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/mf_userans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_above="@id/mf_des03"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dr_userans_des"
            />

        <TextView
            android:id="@+id/mf_des02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dr_des02_title"
            android:layout_above="@id/mf_userans"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/mf_des02"
            android:layout_marginBottom="10dp"
            android:text="確定"/>

        <GridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="3"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp"
            android:layout_above="@+id/submit_btn"
            android:layout_below="@+id/mf_des01" />

    </RelativeLayout>
</RelativeLayout>