<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/MyMaterialTheme"
        android:id="@+id/appbarlayout">

        <include
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- The main content view -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbarlayout"
        android:padding="16dp">

        <RelativeLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/gidTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:text="@string/dr_group" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_next"
                android:id="@+id/btn_next"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_prev"
                android:id="@+id/btn_prev"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/btn_next"
                android:layout_toStartOf="@+id/btn_next" />
        </RelativeLayout>
        <ScrollView
            android:layout_below="@id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/img_height"
                    android:adjustViewBounds="true"
                    android:src="@drawable/a101"
                    android:layout_gravity="center_horizontal"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#515151"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dr_ingredient"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/input_ingredient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#515151"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dr_modulation_method"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/input_modulation_method"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#515151"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dr_decorations"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/input_decorations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#515151"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dr_cup_utensils"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/input_cup_utensils"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</RelativeLayout>