<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/MyMaterialTheme"
        android:id="@+id/appbarlayout">

        <include
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- The main content view -->
    <RelativeLayout
        android:layout_below="@id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tb_showans_btn"
            android:id="@+id/showhiddenbtn"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_prev"
            android:id="@+id/prev_btn"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/result_btn"
            android:layout_toStartOf="@+id/result_btn" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            android:id="@+id/result_btn"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/question"
            android:layout_below="@id/showhiddenbtn"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"/>

        <LinearLayout
            android:layout_below="@id/question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/ans1TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="答案1" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/ans2TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="答案2" />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/ans3TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="答案3" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/ans4TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="答案3" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>